Improve UI of personal site

--- a/consistency.html
+++ b/consistency.html
@@ -4,18 +4,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Rutul Dav&egrave">
+    <meta name="author" content="Rutul Dav&egrave;">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>Rutul Dav&egrave | Professional principles - Consistency</title>
+    <title>Rutul Dav&egrave; | Professional principles - Consistency</title>
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Oswald:400,300,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-
 
     <!-- Custom styles for this template -->
     <link href="assets/css/main.css" rel="stylesheet">
@@ -33,49 +32,79 @@
 
   <body>
     <div class="container">
-  		<div class="row">
-  			<div class="col-lg-8 col-lg-offset-2 w">
-  				<h2>Consistency</h2>
-          <hr class="soften">
-  			</div>
-  		</div>
+      <!-- Header Section -->
+      <header class="site-header">
+        <h1 class="site-title">RUTUL DAVÈ</h1>
+        <div class="subtitle">Entrepreneur. Technologist. Product Maker.</div>
 
-    	<div class="row">
-    		<div class="col-lg-8 col-lg-offset-2">
-          <p>
-            <h4>
-              <blockquote>
-                "We tend to overestimate what we can do in a day and underestimate what we can achieve in a decade."
-              </blockquote>
-              <blockquote>
-                "In the short term, you are as good as your intensity. In the long term, you are only as good as your consistency."
-                <br/>
-                <br/>
-                <div class="text-muted">- Shane Parrish</div>
-              </blockquote>
+        <nav class="nav-container">
+          <ul class="nav-menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html#principles">Principles</a></li>
+            <li><a href="index.html#books">Books</a></li>
+            <li><a href="index.html#projects">Projects</a></li>
+            <li><a href="index.html#awards">Awards</a></li>
+            <li><a href="mailto:rutuldave@gmail.com">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
 
-              <blockquote>
-                The consistency of your endeavors (exercise, companionship, work) is more important than the quantity.
-                Nothing beats small things done every day which is way more important than what you do occasionally.
-              </blockquote>
-              <blockquote>
-                “All the greatest prizes in life, in wealth, relationships, or knowledge, come from the magic of compounding interest by amplifying
-                small steady gains. All you need for abundance is to keep adding 1% more than you subtract on a regular basis.”
-              </blockquote>
+      <!-- Principle Content -->
+      <section class="section">
+        <h2>Consistency</h2>
 
-              <blockquote>
-                “27th. A man who defers working because he wants tranquillity of mind will have lost the habit when tranquillity comes.
-                Work under any circumstances—all circumstances.
-                I used to carry my sketch when arrested and sketch and compose as I sat by the officer's side.
-                The consequence was I was always ready, never depressed, and returned to my work with a new thought or an
-                additional improvement as if I had been all the time at home."
-                <br/>
-                <br/>
-                <div class="text-muted">- Benjamin Robert Haydon, April 1844</div>
-              </blockquote>
-            </h4>
-          </p>
-      </div>
-    </div>
+        <hr>
+
+        <div class="principle-content">
+          <blockquote>
+            "We tend to overestimate what we can do in a day and underestimate what we can achieve in a decade."
+          </blockquote>
+
+          <blockquote>
+            "In the short term, you are as good as your intensity. In the long term, you are only as good as your consistency."
+            <div class="text-muted">- Shane Parrish</div>
+          </blockquote>
+
+          <blockquote>
+            The consistency of your endeavors (exercise, companionship, work) is more important than the quantity.
+            Nothing beats small things done every day which is way more important than what you do occasionally.
+          </blockquote>
+
+          <blockquote>
+            "All the greatest prizes in life, in wealth, relationships, or knowledge, come from the magic of compounding interest by amplifying
+            small steady gains. All you need for abundance is to keep adding 1% more than you subtract on a regular basis."
+          </blockquote>
+
+          <blockquote>
+            "27th. A man who defers working because he wants tranquillity of mind will have lost the habit when tranquillity comes.
+            Work under any circumstances—all circumstances.
+            I used to carry my sketch when arrested and sketch and compose as I sat by the officer's side.
+            The consequence was I was always ready, never depressed, and returned to my work with a new thought or an
+            additional improvement as if I had been all the time at home."
+            <div class="text-muted">- Benjamin Robert Haydon, April 1844</div>
+          </blockquote>
+        </div>
+      </section>
+
+      <!-- Footer -->
+      <footer class="site-footer">
+        <div class="row">
+          <div class="col-md-6">
+            <p class="text-muted">&copy; 2025 Rutul Davè. All rights reserved.</p>
+          </div>
+          <div class="col-md-6">
+            <ul class="social-links">
+              <li><a href="https://www.linkedin.com/in/rutul-dave/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://github.com/stockandawe" target="_blank"><i class="fa fa-github"></i></a></li>
+              <li><a href="mailto:rutuldave@gmail.com"><i class="fa fa-envelope"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
+    </div><!-- /.container -->
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
   </body>
 </html>
