--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Rutul Dav&egrave; | Entrepreneur, Technologist, Product Maker</title>
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Oswald:400,300,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -32,28 +32,37 @@
   </head>
 
   <body>
-
-
     <div class="container">
-  		<div class="row">
-  			<div class="col-lg-8 col-lg-offset-2 w">
-  				<h2>Rutul Dav&egrave;</h2>
-          <h5>
-            <a href="https://www.linkedin.com/in/rutul-dave/" target="_blank">LinkedIn</a>
-            |
-            <a href="mailto:rutuldave@gmail.com">rutuldave [at] gmail.com</a>
-          </h5>
-          <hr class="soften">
-  			</div>
-  		</div>
+      <!-- Header Section -->
+      <header class="site-header">
+        <h1 class="site-title">RUTUL DAVÈ</h1>
+        <div class="subtitle">Entrepreneur. Technologist. Product Maker.</div>
 
-    	<div class="row">
-    		<div class="col-lg-8 col-lg-offset-2">
-    			<p>
+        <nav class="nav-container">
+          <ul class="nav-menu">
+            <li><a href="#about">About</a></li>
+            <li><a href="#principles">Principles</a></li>
+            <li><a href="#books">Books</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#awards">Awards</a></li>
+          </ul>
+        </nav>
+      </header>
+
+      <!-- Profile Section -->
+      <section id="about" class="profile-section">
+        <!-- If you have a profile image, uncomment and add the path -->
+        <!-- <img src="assets/img/profile.jpg" alt="Rutul Davè" class="profile-image"> -->
+
+        <div class="profile-content">
+          <h2 class="headline">ENTREPRENEUR, TECHNOLOGIST, AND PRODUCT MAKER</h2>
+
+          <p>
             I am an entrepreneur who loves making products and growing startups. Currently, I am the
             Cofounder & CTO of <a href="https://www.himaxwell.com" target="_blank">Maxwell</a>,
             a company that builds software and services to power the future of home financing.
           </p>
+
           <p>
             Before Maxwell, I founded <a href="http://brightfunds.org" target="_blank">Bright Funds</a> in 2012
             with a mission to design experiences that unlock passion and capital from a
@@ -62,154 +71,158 @@
             startups and venture-backed private companies including Coverity (acquired by Synopsys),
             Omneon (acquired by Harmonic), Topspin (acquired by Cisco) and Procket Networks (acquired by Cisco).
           </p>
+
           <p>
             I also serve on the board of <a href="https://www.foodhelpline.org/" target="_blank">Lemontree Foods</a>,
             a nonprofit with a mission to alleviate food insecurity.
           </p>
+
           <p>
             Some of my public software projects and code can be found on <a href="https://github.com/stockandawe" target="_blank">GitHub</a>.
           </p>
-          <hr class="soften">
-    		</div>
-    	</div>
+        </div>
+      </section>
+
+      <hr>
+
+      <!-- Professional Principles Section -->
+      <section id="principles" class="section">
+        <h3>Professional Principles</h3>
+        <div class="subtitle">A collection of ideas, quotes, thoughts, and stories that guide my daily actions and decision-making.</div>
+
+        <ul class="content-list">
+          <li><a href="consistency.html">Consistency</a></li>
+          <li><a href="focus.html">Focus</a></li>
+          <li><a href="happiness.html">Happiness</a></li>
+          <li><a href="monkeys-and-pedestals.html">Monkeys and Pedestals</a></li>
+          <li><a href="questions.html">Questions</a></li>
+          <li><a href="stoicism.html">Stoicism</a></li>
+          <li><a href="simple-not-easy.html">Simple is not easy</a></li>
+          <li><a href="storytelling.html">Storytelling</a></li>
+          <li><a href="wealth.html">Wealth</a></li>
+        </ul>
+      </section>
+
+      <!-- Books Section -->
+      <section id="books" class="section">
+        <h3>Books that have shaped my thinking</h3>
+
+        <ul class="content-list">
+          <li>
+            <a href="https://www.goodreads.com/book/show/37786022-storyworthy" target="_blank">
+              Storyworthy: Engage, Teach, Persuade, and Change Your Life through the Power of Storytelling
+            </a>
+          </li>
+          <li>
+            <a href="https://www.goodreads.com/en/book/show/35957157" target="_blank">
+              Thinking in Bets: Making Smarter Decisions When You Don't Have All the Facts
+            </a>
+          </li>
+          <li>
+            <a href="https://www.goodreads.com/book/show/25899336-when-breath-becomes-air" target="_blank">
+              When Breath Becomes Air
+            </a>
+          </li>
+          <li>
+            <a href="https://www.goodreads.com/book/show/18077903-creativity-inc" target="_blank">
+              Creativity, Inc.: Overcoming the Unseen Forces That Stand in the Way of True Inspiration
+            </a>
+          </li>
+        </ul>
+      </section>
+
+      <!-- Projects Section -->
+      <section id="projects" class="section">
+        <h3>Projects</h3>
+
+        <ul class="content-list">
+          <li>
+            <a href="https://storycoach.app" target="_blank">StoryCoach App</a> - Develop your storytelling skills using AI-powered writing tools, buliding daily habits, and doing skill-building exercises.
+          </li>
+          <li>
+            <a href="https://rutuldave.com/decision-ninja-blog/" target="_blank">Decision Ninja Blog</a> - Tools, tips, and tricks to improve the quality of all your personal and professional decisions.
+          </li>
+          <li>
+            <a href="https://github.com/stockandawe/saas-startup-cto-checklist" target="_blank">SaaS Startup CTO Checklist</a> - Checklist of all things to consider for CTOs of SaaS startups.
+          </li>
+          <li>
+            <a href="http://rutuldave.com/product-pick-two/" target="_blank">Product Pick Two</a> - Visualizing the challenge of Product Management.
+          </li>
+          <li>
+            <a href="http://rutuldave.com/IdeaList_iOS/" target="_blank">Idea List - iOS App</a> - My first iOS native app created in Swift 2.0.
+          </li>
+          <li>
+            <a href="http://rutuldave.com/startup-bookmarks/" target="_blank">Startup Bookmarks</a> - An active list of resources for building a better startup.
+          </li>
+          <li>
+            <a href="http://rutuldave.com/c-and-cpp-test-programs" target="_blank">C/C++ Tests</a> - Test projects and code samples in c and c++ created as I navigated the world of systems programming.
+          </li>
+          <li>
+            <a href="http://rutuldave.com/rider_flow" target="_blank">Flow</a> - App for Reroute Hackathon on 19th Oct, 2012.
+          </li>
+          <li>
+            <a href="http://rutuldave.com/IsItAStartup" target="_blank">IsItAStartup?</a> - A simple Q&A bot that helps you evaluate if you should launch a startup based on your idea.
+          </li>
+        </ul>
+      </section>
+
+      <!-- Awards Section -->
+      <section id="awards" class="section">
+        <h3>Awards / Notable mentions</h3>
+
+        <ul class="content-list">
+          <li>
+            <a href="https://www.inman.com/best-of-finance-awards/" target="_blank">
+              2024 Inman Best of Finance Award Winner.
+            </a>
+          </li>
+          <li>
+            <a href="https://www.housingwire.com/winner-profile/2023-hw-vanguard-rutul-dave/" target="_blank">
+              2023 HW Vanguard Award Winner.
+            </a>
+          </li>
+          <li>
+            <a href="https://thefinancialtechnologyreport.com/the-top-25-financial-technology-ctos-and-cios-of-2023/" target="_blank">
+              Top 25 Financial Technology CTOs and CIOs of 2023</a> by The Financial Technology Report.
+          </li>
+          <li>
+            <a href="https://www.housingwire.com/winner-profile/2022-hw-tech-trendsetter-rutul-dave/" target="_blank">
+              2022 HW Tech Trendsetter: Rutul Davé
+            </a>
+          </li>
+          <li>
+            <a href="https://www.verdict.co.uk/cto-talk-qa-with-rutul-dave-of-maxwell/" target="_blank">CTO Talk: Q&A with Rutul Davé of Maxwell</a> with Verdict.
+          </li>
+          <li>
+            CauseArtist's list of <a href="http://causeartist.com/15-social-entrepreneurs-watch-2014" target="_blank">
+              Social Entrepreneurs to watch for in 2014</a>.
+          </li>
+          <li>
+            <a href="http://online.wsj.com/news/articles/SB10001424127887324880504578298150540138218" target="_blank">Featured
+            in The Wall Street Journal</a> and on a <a href="https://vimeo.com/64199097" target="_blank">KRON news segment on on startup visas</a>.
+          </li>
+        </ul>
+      </section>
+
+      <!-- Footer -->
+      <footer class="site-footer">
+        <div class="row">
+          <div class="col-md-6">
+            <p class="text-muted">&copy; 2025 Rutul Davè. All rights reserved.</p>
+          </div>
+          <div class="col-md-6">
+            <ul class="social-links">
+              <li><a href="https://www.linkedin.com/in/rutul-dave/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://github.com/stockandawe" target="_blank"><i class="fa fa-github"></i></a></li>
+              <li><a href="mailto:rutuldave@gmail.com"><i class="fa fa-envelope"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
     </div><!-- /.container -->
 
-    <div class="container">
-      <div class="row">
-          <div class="col-lg-8 col-lg-offset-2" style="margin-bottom: 80px;">
-              <p>
-                <h3>
-                  Professional Principles
-                </h3>
-                <h4>
-                  A collection of ideas, quotes, thoughts, and stories that guide my daily actions and decision-making.
-                </h4>
-                <ul class="unstyled">
-                  <li>
-                    <a href="consistency.html">Consistency</a>
-                  </li>
-                  <li>
-                    <a href="focus.html">Focus</a>
-                  </li>
-                  <li>
-                    <a href="happiness.html">Happiness</a>
-                  </li>
-                  <li>
-                    <a href="monkeys-and-pedestals.html">Monkeys and Pedestals</a>
-                  </li>
-                  <li>
-                    <a href="questions.html">Questions</a>
-                  </li>
-                  <li>
-                    <a href="stoicism.html">Stoicism</a>
-                  </li>
-                  <li>
-                    <a href="simple-not-easy.html">Simple is not easy</a>
-                  </li>
-                  <li>
-                    <a href="storytelling.html">Storytelling</a>
-                  </li>
-                  <li>
-                    <a href="wealth.html">Wealth</a>
-                  </li>
-                </ul>
-              </p>
-              <p>
-                <h3>
-                  Books that have shaped my thinking
-                </h3>
-                <ul class="unstyled">
-                  <li>
-                    <a href="https://www.goodreads.com/book/show/37786022-storyworthy" target="_blank">
-                      Storyworthy: Engage, Teach, Persuade, and Change Your Life through the Power of Storytelling
-                    </a>
-                  </li>
-                  <li>
-                    <a href="https://www.goodreads.com/en/book/show/35957157" target="_blank">
-                      Thinking in Bets: Making Smarter Decisions When You Don't Have All the Facts
-                    </a>
-                  </li>
-                  <li>
-                    <a href="https://www.goodreads.com/book/show/25899336-when-breath-becomes-air" target="_blank">
-                      When Breath Becomes Air
-                    </a>
-                  </li>
-                  <li>
-                    <a href="https://www.goodreads.com/book/show/18077903-creativity-inc" target="_blank">
-                      Creativity, Inc.: Overcoming the Unseen Forces That Stand in the Way of True Inspiration
-                    </a>
-                  </li>
-                </ul>
-              </p>
-              <p>
-                <h3>
-                    Projects
-                </h3>
-                <ul class="unstyled">
-                  <li>
-                    <a href="https://storycoach.app" target="_blank">StoryCoach App</a> - Develop your storytelling skills using AI-powered writing tools, buliding daily habits, and doing skill-building exercises.
-                  </li>
-                  <li>
-                    <a href="https://rutuldave.com/decision-ninja-blog/" target="_blank">Decision Ninja Blog</a> - Tools, tips, and tricks to improve the quality of all your personal and professional decisions.
-                  </li>
-                  <li>
-                    <a href="https://github.com/stockandawe/saas-startup-cto-checklist" target="_blank">SaaS Startup CTO Checklist</a> - Checklist of all things to consider for CTOs of SaaS startups.
-                  </li>
-                  <li>
-                    <a href="http://rutuldave.com/product-pick-two/" target="_blank">Product Pick Two</a> - Visualizing the challenge of Product Management.
-                  <li>
-                    <a href="http://rutuldave.com/IdeaList_iOS/" target="_blank">Idea List - iOS App</a> - My first iOS native app created in Swift 2.0.
-                  </li>
-                  <li>
-                    <a href="http://rutuldave.com/startup-bookmarks/" target="_blank">Startup Bookmarks</a> - An active list of resources for building a better startup.
-                  </li>
-                  <li>
-                    <a href="http://rutuldave.com/c-and-cpp-test-programs" target="_blank">C/C++ Tests</a> - Test projects and code samples in c and c++ created as I navigated the world of systems programming.
-                  </li>
-                  <li>
-                    <a href="http://rutuldave.com/rider_flow" target="_blank">Flow</a> - App for Reroute Hackathon on 19th Oct, 2012.
-                  </li>
-                  <li>
-                    <a href="http://rutuldave.com/IsItAStartup" target="_blank">IsItAStartup?</a> - A simple Q&A bot that helps you evaluate if you should launch a startup based on your idea.
-                  </li>
-                </ul>
-              </p>
-              <p>
-                <h3>
-                  Awards / Notable mentions
-                </h3>
-                <ul class="unstyled">
-                  <li>
-                    <a href="https://www.inman.com/best-of-finance-awards/" target="_blank">
-                      2024 Inman Best of Finance Award Winner.
-                  </li>
-                  <li>
-                    <a href="https://www.housingwire.com/winner-profile/2023-hw-vanguard-rutul-dave/" target="_blank">
-                      2023 HW Vanguard Award Winner.
-                  </li>
-                  <li>
-                    <a href="https://thefinancialtechnologyreport.com/the-top-25-financial-technology-ctos-and-cios-of-2023/" target="_blank">
-                      Top 25 Financial Technology CTOs and CIOs of 2023</a> by The Financial Technology Report.
-                  </li>
-                  <li>
-                    <a href="https://www.housingwire.com/winner-profile/2022-hw-tech-trendsetter-rutul-dave/" target="_blank">
-                      2022 HW Tech Trendsetter: Rutul Davé
-                  </li>
-                  <li>
-                    <a href="https://www.verdict.co.uk/cto-talk-qa-with-rutul-dave-of-maxwell/" target="_blank">CTO Talk: Q&A with Rutul Davé of Maxwell</a> with Verdict.
-                  </li>
-                  <li>
-                    CauseArtist’s list of <a href="http://causeartist.com/15-social-entrepreneurs-watch-2014" target="_blank">
-                      Social Entrepreneurs to watch for in 2014</a>.
-                  </li>
-                  <li>
-                      <a href="http://online.wsj.com/news/articles/SB10001424127887324880504578298150540138218" target="_blank">Featured
-                      in The Wall Street Journal</a> and on a <a href="https://vimeo.com/64199097" target="_blank">KRON news segment on on startup visas</a>.
-                  </li>
-                </ul>
-              </p>
-          </div>
-      </div>
-    </div>
+    <!-- Bootstrap core JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
   </body>
 </html>
