--- a/questions.html
+++ b/questions.html
@@ -4,18 +4,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Rutul Dav&egrave">
+    <meta name="author" content="Rutul Dav&egrave;">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>Rutul Dav&egrave | Professional principles - Questions</title>
+    <title>Rutul Dav&egrave; | Professional principles - Questions</title>
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Oswald:400,300,700" rel="stylesheet" type="text/css">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-
 
     <!-- Custom styles for this template -->
     <link href="assets/css/main.css" rel="stylesheet">
@@ -33,162 +32,168 @@
 
   <body>
     <div class="container">
-  		<div class="row">
-  			<div class="col-lg-8 col-lg-offset-2 w">
-  				<h2>Questions</h2>
-          <h5>
-            “The best discoveries in life come not from finding the right answers, but from asking the right questions.”
-          </h5>
-          <hr class="soften">
-  			</div>
-  		</div>
+      <!-- Header Section -->
+      <header class="site-header">
+        <h1 class="site-title">RUTUL DAVÈ</h1>
+        <div class="subtitle">Entrepreneur. Technologist. Product Maker.</div>
 
-    	<div class="row">
-    		<div class="col-lg-8 col-lg-offset-2">
-          <p>
-            <blockquote>
-              "Ask a better question, get a better answer."
-              <br />
-              <div class="text-muted">- Shaan Puri</div>
-            </blockquote>
-          </p>
-          <p>
-            <blockquote>
-              "The beginner chases the right answers. The master chases the right questions."
-              <br />
-              <div class="text-muted">- James Clear</div>
-            </blockquote>
-          </p>
-          <p>
-            <blockquote>
-              "The best discoveries in life come not from finding the right answers, but from asking the right questions."
-              <br />
-              <div class="text-muted">- Unknown</div>
-            </blockquote>
-          </p>
+        <nav class="nav-container">
+          <ul class="nav-menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html#principles">Principles</a></li>
+            <li><a href="index.html#books">Books</a></li>
+            <li><a href="index.html#projects">Projects</a></li>
+            <li><a href="index.html#awards">Awards</a></li>
+            <li><a href="mailto:rutuldave@gmail.com">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
+
+      <!-- Principle Content -->
+      <section class="section">
+        <h2>Questions</h2>
+        <div class="subtitle">"The best discoveries in life come not from finding the right answers, but from asking the right questions."</div>
+
+        <hr>
+
+        <div class="principle-content">
+          <blockquote>
+            "Ask a better question, get a better answer."
+            <div class="text-muted">- Shaan Puri</div>
+          </blockquote>
+
+          <blockquote>
+            "The beginner chases the right answers. The master chases the right questions."
+            <div class="text-muted">- James Clear</div>
+          </blockquote>
+
+          <blockquote>
+            "The best discoveries in life come not from finding the right answers, but from asking the right questions."
+            <div class="text-muted">- Unknown</div>
+          </blockquote>
+
+          <hr>
+
+          <h4>Small Talk/Getting to know someone:</h4>
+          <ul class="content-list">
+            <li>What's on your unofficial resume?</li>
+            <li>Who are your role models and why?</li>
+            <li>What's lighting you up outside of work?</li>
+            <li>What's an ideal Sunday morning for you?</li>
+            <li>What are you most excited about currently?</li>
+            <li>If you had another career, what would it be?</li>
+            <li>What's something you're happy to overspend on?</li>
+            <li>What's your favorite book you've read recently?</li>
+            <li>What is a risk you took that changed your life?</li>
+            <li>You look happy! What were you doing right before this?</li>
+            <li>What's the nicest thing someone's ever said about you?</li>
+            <li>What's the meanest thing someone's ever said about you?</li>
+            <li>Tell me about your friends and why are they your friends.</li>
+            <li>What's an encounter with a stranger you will never forget?</li>
+            <li>What is something about you that people tend to get wrong?</li>
+            <li>When was the last time you did something for the first time?</li>
+            <li>What is something you'd whisper in the ear of your younger self?</li>
+            <li>If you could have any job in the world, what would it be and why?</li>
+            <li>If you could move anywhere in the world, where would it be and why?</li>
+            <li>You got a little pep in your step today, what'd you have for breakfast?</li>
+            <li>If you didn't know the day you were born, how old would you think you are?</li>
+            <li>What's something about you that you think is a good quality, but others would disagree?</li>
+            <li>What's something random or improbable that happened in the past that had a major impact on your life?</li>
+          </ul>
+
+          <h4>Questions I ask myself often:</h4>
+          <ul class="content-list">
+            <li>Who needs my help?</li>
+            <li>What are my anti-goals?</li>
+            <li>Am I playing a stupid game?</li>
+            <li>Is this the beginning, or is this the end?</li>
+            <li>If I could only work two hours today but still wanted today to be a huge success, what would I do in those two hours?</li>
+          </ul>
+
+          <h4>Questions for doing a "self-review":</h4>
+          <ul class="content-list">
+            <li>What are the recent wins?</li>
+            <li>What are the things I am bad at that I AM accepting and not working on?</li>
+            <li>What are the things I am bad at that I am NOT accepting and working on?</li>
+            <li>What are the things in my life I am no longer willing to tolerate​ and plan to start working on?</li>
+          </ul>
+
+          <h4>When I interview someone:</h4>
+          <ul class="content-list">
+            <li>What is your superpower?</li>
+            <li>What's the hardest thing you've ever done?</li>
+            <li>What did you fail at in the last 12 months?</li>
+            <li>What's the best advice you've ever received?</li>
+            <li>What question am I not asking you that you want me to?</li>
+            <li>What could you give a 5-minute presentation on with no prep?</li>
+            <li>What one habit has made a crucial difference in your success?</li>
+            <li>What do you think we are doing wrong as a company right now?</li>
+            <li>What's something that everyone takes for granted that you think is hogwash?</li>
+            <li>What's something you have changed your mind on over the last decade/recently?</li>
+            <li>Tell me about a time when you needed to disagree with your manager or fight for a position against higher leadership.</li>
+          </ul>
+
+          <h4>Work-related:</h4>
+          <ul class="content-list">
+            <li>Instead of: When will this be done?
+              <ul>
+                <li>When would you be surprised by it being done?</li>
+                <li>When would you be surprised if we didn't have this done by?</li>
+                <li>Okay, great. So best case scenario, what are you thinking?</li>
+              </ul>
+            </li>
+            <li>
+              When someone explains a long, complex plan:
+              <ul>
+                <li>All that sounds hard. What would be easy?</li>
+                <li>What has to be true for it to take half the time?</li>
+              </ul>
+            </li>
+            <li>
+              When managing someone:
+              <ul>
+                <li>What's on your mind?</li>
+                <li>What's a conversation you've been avoiding?</li>
+              </ul>
+            </li>
+          </ul>
+
+          <h4>When someone offers an opinion or belief or does what they do, the best questions to ask people (in a non-judgemental way):</h4>
+          <ul class="content-list">
+            <li>Why do you do that?</li>
+            <li>Why do you think that?</li>
+            <li>
+              Topics like risk, greed, and fear are not the kind of things that we can learn and master as a society such as agriculture.
+              Some lessons have to be experienced firsthand before they can be understood. (Michael Batnik)
+              <ul>
+                <li>Instead of asking - why do you believe that?</li>
+                <li>Ask - "What have you experienced that I haven't that makes you believe what you do?"</li>
+                <li>Ask - "Would I think the same thing if I experienced what you have?</li>
+              </ul>
+            </li>
+          </ul>
         </div>
-      </div>
+      </section>
 
-      <hr class="soften" />
-
-    	<div class="row">
-    		<div class="col-lg-8 col-lg-offset-2">
-          <p>
-            <h5>Small Talk/Getting to know someone:</h5>
-            <ul>
-              <li>What's on your unofficial resume?</li>
-              <li>Who are your role models and why?</li>
-              <li>What's lighting you up outside of work?</li>
-              <li>What's an ideal Sunday morning for you?</li>
-              <li>What are you most excited about currently?</li>
-              <li>If you had another career, what would it be?</li>
-              <li>What's something you're happy to overspend on?</li>
-              <li>What's your favorite book you've read recently?</li>
-              <li>What is a risk you took that changed your life?</li>
-              <li>You look happy! What were you doing right before this?</li>
-              <li>What's the nicest thing someone's ever said about you?</li>
-              <li>What's the meanest thing someone's ever said about you?</li>
-              <li>Tell me about your friends and why are they your friends.</li>
-              <li>What's an encounter with a stranger you will never forget?</li>
-              <li>What is something about you that people tend to get wrong?</li>
-              <li>When was the last time you did something for the first time?</li>
-              <li>What is something you'd whisper in the ear of your younger self?</li>
-              <li>If you could have any job in the world, what would it be and why?</li>
-              <li>If you could move anywhere in the world, where would it be and why?</li>
-              <li>You got a little pep in your step today, what'd you have for breakfast?</li>
-              <li>If you didn't know the day you were born, how old would you think you are?</li>
-              <li>What's something about you that you think is a good quality, but others would disagree?</li>
-              <li>What's something random or improbable that happened in the past that had a major impact on your life?</li>
+      <!-- Footer -->
+      <footer class="site-footer">
+        <div class="row">
+          <div class="col-md-6">
+            <p class="text-muted">&copy; 2025 Rutul Davè. All rights reserved.</p>
+          </div>
+          <div class="col-md-6">
+            <ul class="social-links">
+              <li><a href="https://www.linkedin.com/in/rutul-dave/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://github.com/stockandawe" target="_blank"><i class="fa fa-github"></i></a></li>
+              <li><a href="mailto:rutuldave@gmail.com"><i class="fa fa-envelope"></i></a></li>
             </ul>
-          </p>
-
-          <h5>Questions I ask myself often:</h5>
-          <p>
-            <ul>
-              <li>Who needs my help?</li>
-              <li>What are my anti-goals?</li>
-              <li>Am I playing a stupid game?</li>
-              <li>Is this the beginning, or is this the end?</li>
-              <li>If I could only work two hours today but still wanted today to be a huge success, what would I do in those two hours?</li>
-            </ul>
-          </p>
-
-          <h5>Questions for doing a "self-review":</h5>
-          <p>
-            <ul>
-              <li>What are the recent wins?</li>
-              <li>What are the things I am bad at that I AM accepting and not working on?</li>
-              <li>What are the things I am bad at that I am NOT accepting and working on?</li>
-              <li>What are the things in my life I am no longer willing to tolerate​ and plan to start working on?</li>
-            </ul>
-          </p>
-
-          <h5>When I interview someone:</h5>
-          <p>
-            <ul>
-              <li>What is your superpower?</li>
-              <li>What's the hardest thing you've ever done?</li>
-              <li>What did you fail at in the last 12 months?</li>
-              <li>What's the best advice you've ever received?</li>
-              <li>What question am I not asking you that you want me to?</li>
-              <li>What could you give a 5-minute presentation on with no prep? </li>
-              <li>What one habit has made a crucial difference in your success?</li>
-              <li>What do you think we are doing wrong as a company right now?</li>
-              <li>What's something that everyone takes for granted that you think is hogwash?</li>
-              <li>What's something you have changed your mind on over the last decade/recently?</li>
-              <li>Tell me about a time when you needed to disagree with your manager or fight for a position against higher leadership.</li>
-            </ul>
-          </p>
-
-          <h5>Work-related:</h5>
-          <p>
-            <ul>
-              <li>Instead of: When will this be done?
-                <ul>
-                  <li>When would you be surprised by it being done?</li>
-                  <li>When would you be surprised if we didn't have this done by?</li>
-                  <li>Okay, great. So best case scenario, what are you thinking?</li>
-                </ul>
-              </li>
-              <li>
-                When someone explains a long, complex plan:
-                  <ul>
-                    <li>All that sounds hard. What would be easy?</li>
-                    <li>What has to be true for it to take half the time?</li>
-                  </ul>
-              </li>
-              <li>
-                When managing someone:
-                <ul>
-                  <li>What's on your mind?</li>
-                  <li>What's a conversation you've been avoiding?</li>
-                </ul>
-              </li>
-            </ul>
-          </p>
-
-          <h5>When someone offers an opinion or belief or does what they do, the best questions to ask people (in a non-judgemental way):</h5>
-          <p>
-            <ul>
-              <li>Why do you do that?</li>
-              <li>Why do you think that?</li>
-              <li>
-                Topics like risk, greed, and fear are not the kind of things that we can learn and master as a society such as agriculture.
-                Some lessons have to be experienced firsthand before they can be understood. (Michael Batnik)
-                <ul>
-                  <li>Instead of asking - why do you believe that?</li>
-                  <li>Ask - “What have you experienced that I haven't that makes you believe what you do?”</li>
-                  <li>Ask - “Would I think the same thing if I experienced what you have?</li>
-                </ul>
-              </li>
-
-            </ul>
-          </p>
-
-          <hr class="soften">
+          </div>
         </div>
-      </div>
+      </footer>
+    </div><!-- /.container -->
 
-    </div>
+    <!-- Bootstrap core JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
   </body>
 </html>
