--- a/stoicism.html
+++ b/stoicism.html
@@ -4,18 +4,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Rutul Dav&egrave">
+    <meta name="author" content="Rutul Dav&egrave;">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>Rutul Dav&egrave | Professional principles - Stoicism</title>
+    <title>Rutul Dav&egrave; | Professional principles - Stoicism</title>
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Oswald:400,300,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-
 
     <!-- Custom styles for this template -->
     <link href="assets/css/main.css" rel="stylesheet">
@@ -33,77 +32,97 @@
 
   <body>
     <div class="container">
-  		<div class="row">
-  			<div class="col-lg-8 col-lg-offset-2 w">
-  				<h2>Stoicism</h2>
-          <h5>
-            Wisdom | Courage | Temperance | Justice
-          </h5>
-          <hr class="soften">
-  			</div>
-  		</div>
+      <!-- Header Section -->
+      <header class="site-header">
+        <h1 class="site-title">RUTUL DAVÈ</h1>
+        <div class="subtitle">Entrepreneur. Technologist. Product Maker.</div>
 
-    	<div class="row">
-    		<div class="col-lg-8 col-lg-offset-2">
-          <p>
-            <h5>Key stoic principles I try and <b>practice every day</b>:</h5>
-            <ul>
-              <li>Don't suffer imagined troubles.</li>
-              <li>Focus on what you can control.</li>
-              <li>You have the power to have no opinion.</li>
-              <li>When one is busy and absorbed in one's work, the very absorption affords great delight.</li>
-            </ul>
-          </p>
+        <nav class="nav-container">
+          <ul class="nav-menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html#principles">Principles</a></li>
+            <li><a href="index.html#books">Books</a></li>
+            <li><a href="index.html#projects">Projects</a></li>
+            <li><a href="index.html#awards">Awards</a></li>
+            <li><a href="mailto:rutuldave@gmail.com">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
 
-          <p>
-            <h5>Stoicism for <b>business/work</b>:</h5>
-            <ul>
-              <li>Say no (a lot).</li>
-              <li>Do the more difficult thing.</li>
-              <li>Focus on what you can control.</li>
-              <li>Focus on process, not outcomes.</li>
-              <li>Make a little progress each day.</li>
-              <li>Don't be too afraid to ask for help.</li>
-              <li>There is always something you can do.</li>
-            </ul>
-          </p>
+      <!-- Principle Content -->
+      <section class="section">
+        <h2>Stoicism</h2>
+        <div class="subtitle">Wisdom | Courage | Temperance | Justice</div>
 
-          <h5>Key Stoic <b>Don't Dos</b>:</h5>
-          <p>
-            <ul>
-              <li>Don't suffer imagined troubles.</li>
-              <li>Don't compare yourself to others.</li>
-              <li>Don't have an opinion on everything.</li>
-              <li>Don't judge other people. You mess up too.</li>
-              <li>Don't talk more than you listen. Two ears, one mouth.</li>
-              <li>Don't be overheard complaining. Not even to yourself.</li>
-              <li>Don't overindulge. Life is about temperance and balance. It's about finding the right amount.</li>
-              <li>Don't tie your identity to things you own. Those things are fragile and can be taken from you at any moment.</li>
-            </ul>
-          </p>
+        <hr>
 
-          <h5>Stoic one-liners that will help you <b>beat anxiety</b>:</h5>
-          <p>
-            <ul>
-              <li>It's not things that upset us, it's our opinion about things. - Epictetus</li>
-              <li>He who suffers before it is necessary suffers more than necessary. - Seneca</li>
-              <li>Beat anxiety: Today I escaped anxiety - no I discarded it because it was within me. - Marcus Aurelius</li>
-            </ul>
-          </p>
+        <div class="principle-content">
+          <h4>Key stoic principles I try and <b>practice every day</b>:</h4>
+          <ul class="content-list">
+            <li>Don't suffer imagined troubles.</li>
+            <li>Focus on what you can control.</li>
+            <li>You have the power to have no opinion.</li>
+            <li>When one is busy and absorbed in one's work, the very absorption affords great delight.</li>
+          </ul>
 
-          <h5>3 Stoic reminders for <b>better mental health</b>:</h5>
-          <p>
-            <ol>
-              <li>Poverty is not having too little, it's wanting more. - Seneca</li>
-              <li>It's not things that upset us, it's our opinion about things. - Epictetus</li>
-              <li>Why should you be angry at the world, as if the world would notice? - Marcus Aurelius</li>
-            </ol>
-          </p>
+          <h4>Stoicism for <b>business/work</b>:</h4>
+          <ul class="content-list">
+            <li>Say no (a lot).</li>
+            <li>Do the more difficult thing.</li>
+            <li>Focus on what you can control.</li>
+            <li>Focus on process, not outcomes.</li>
+            <li>Make a little progress each day.</li>
+            <li>Don't be too afraid to ask for help.</li>
+            <li>There is always something you can do.</li>
+          </ul>
 
-          <hr class="soften">
+          <h4>Key Stoic <b>Don't Dos</b>:</h4>
+          <ul class="content-list">
+            <li>Don't suffer imagined troubles.</li>
+            <li>Don't compare yourself to others.</li>
+            <li>Don't have an opinion on everything.</li>
+            <li>Don't judge other people. You mess up too.</li>
+            <li>Don't talk more than you listen. Two ears, one mouth.</li>
+            <li>Don't be overheard complaining. Not even to yourself.</li>
+            <li>Don't overindulge. Life is about temperance and balance. It's about finding the right amount.</li>
+            <li>Don't tie your identity to things you own. Those things are fragile and can be taken from you at any moment.</li>
+          </ul>
+
+          <h4>Stoic one-liners that will help you <b>beat anxiety</b>:</h4>
+          <ul class="content-list">
+            <li>It's not things that upset us, it's our opinion about things. - Epictetus</li>
+            <li>He who suffers before it is necessary suffers more than necessary. - Seneca</li>
+            <li>Beat anxiety: Today I escaped anxiety - no I discarded it because it was within me. - Marcus Aurelius</li>
+          </ul>
+
+          <h4>3 Stoic reminders for <b>better mental health</b>:</h4>
+          <ul class="content-list">
+            <li>Poverty is not having too little, it's wanting more. - Seneca</li>
+            <li>It's not things that upset us, it's our opinion about things. - Epictetus</li>
+            <li>Why should you be angry at the world, as if the world would notice? - Marcus Aurelius</li>
+          </ul>
         </div>
-      </div>
+      </section>
 
-    </div>
+      <!-- Footer -->
+      <footer class="site-footer">
+        <div class="row">
+          <div class="col-md-6">
+            <p class="text-muted">&copy; 2025 Rutul Davè. All rights reserved.</p>
+          </div>
+          <div class="col-md-6">
+            <ul class="social-links">
+              <li><a href="https://www.linkedin.com/in/rutul-dave/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://github.com/stockandawe" target="_blank"><i class="fa fa-github"></i></a></li>
+              <li><a href="mailto:rutuldave@gmail.com"><i class="fa fa-envelope"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
+    </div><!-- /.container -->
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
   </body>
 </html>
