--- a/storytelling.html
+++ b/storytelling.html
@@ -4,18 +4,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Rutul Dav&egrave">
+    <meta name="author" content="Rutul Dav&egrave;">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>Rutul Dav&egrave | Storytelling</title>
+    <title>Rutul Dav&egrave; | Storytelling</title>
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Oswald:400,300,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-
 
     <!-- Custom styles for this template -->
     <link href="assets/css/main.css" rel="stylesheet">
@@ -33,60 +32,82 @@
 
   <body>
     <div class="container">
-  		<div class="row">
-  			<div class="col-lg-8 col-lg-offset-2 w">
-  				<h2>Storytelling</h2>
-          <hr class="soften">
-  			</div>
-  		</div>
+      <!-- Header Section -->
+      <header class="site-header">
+        <h1 class="site-title">RUTUL DAVÈ</h1>
+        <div class="subtitle">Entrepreneur. Technologist. Product Maker.</div>
 
-    	<div class="row">
-    		<div class="col-lg-8 col-lg-offset-2">
-          <div class="text-muted">
-            07.29.2023
-          </div>
-          <br/>
+        <nav class="nav-container">
+          <ul class="nav-menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html#principles">Principles</a></li>
+            <li><a href="index.html#books">Books</a></li>
+            <li><a href="index.html#projects">Projects</a></li>
+            <li><a href="index.html#awards">Awards</a></li>
+            <li><a href="mailto:rutuldave@gmail.com">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
+
+      <!-- Principle Content -->
+      <section class="section">
+        <h2>Storytelling</h2>
+        <div class="subtitle">
+          To be interesting just tell your own story with uncommon honesty.
+          <div class="text-muted">- Kevin Kelly</div>
+        </div>
+
+        <hr>
+
+        <div class="principle-content">
           <p class="lead">
-            To be interesting just tell your own story with uncommon honesty.
-            <div class="text-muted">- Kevin Kelly</div>
           </p>
+
           <p>
-            I love networking events, but I hate going to most of those. Some of the best learnings  and interesting conversations
+            I love networking events, but I hate going to most of those. Some of the best learnings and interesting conversations
             I have had, have happened at networking events. A networking event is where I met a tech-savvy father who created
             incredible bedtime stories for his kids using technology. At another event, I unexpectedly met the entire cast of
             the hit HBO show Silicon Valley. However, despite these memorable experiences, I've always dreaded going to networking events,
             and just recently I realized why.
           </p>
+
           <p>
             I hate introducing myself. I am not an interesting person.
             I haven't been in enough unbelievable circumstances that I can describe to a stranger in a hilarious way.
             I felt I lacked the captivating life experiences that anyone meeting me for the first time would care.
           </p>
+
           <p>
             That's what I used to think. Then I read <a href="https://matthewdicks.com/storyworthy/" target="_blank">Storyworthy by Matthew Dicks</a> and the key message in the book completely changed my mind.
           </p>
+
           <p>
             <mark>
-              “Don't get hung up on the big moments, the unbelievable circumstances, or the hilarious details.
-              Seek out the moments when you felt your heart move”
+              "Don't get hung up on the big moments, the unbelievable circumstances, or the hilarious details.
+              Seek out the moments when you felt your heart move"
             </mark>
           </p>
+
           <p>
             I learned a long time ago that to be good at something, putting in the effort and doing the work to get good at it
             goes a much longer way than just relying on your natural abilities. Challenge accepted.
           </p>
+
           <p>
             So in summer of 2023, I started putting in the work to become a better storyteller.
           </p>
+
           <p>
             The book by Matthew Dicks has some practical exercises that I have started doing. One of them is called <strong>Homework for Life</strong>. Homework for Life is a daily exercise where you take a few minutes to reflect on your day and ask yourself one simple question:
           </p>
+
           <p>
             <mark>
-            “If I had to tell a story from today - a five minute story onstage about something that took place over the course of this
-            day – what would it be? As benign and boring and inconsequential as it might seem, what was the most story-worthy moment from my day?”
+            "If I had to tell a story from today - a five minute story onstage about something that took place over the course of this
+            day – what would it be? As benign and boring and inconsequential as it might seem, what was the most story-worthy moment from my day?"
             </mark>
           </p>
+
           <p>
             For the past month, I've diligently practiced Homework for Life.
             Although it's too early to tell if it's made any difference in my storytelling abilities,
@@ -94,20 +115,43 @@
             little. The last month has felt less like a bunch of days blurred together, and instead it's been a collection of
             memorable events that one day would be storyworthy when I introduce myself or when I tell a story.
           </p>
+
           <p>
             To stay consistent with this habit, I created a simple app that sends me a daily email reminder.
             I respond to the email with my Homework for Life note, and all these entries are collected in a list for easy review.
             This way, I can identify potential stories to share whenever I introduce myself or recount an engaging tale.
           </p>
+
           <p>
-            If you want to practice Homework for Life, check it out here: <a href="https://storyworthy-73b339f7216e.herokuapp.com/" target="_blank">Storyworthy Exercises</a>
+            If you want to practice Homework for Life, check it out here: <a href="https://storycoach.app" target="_blank">StoryCoach</a>
           </p>
+
           <p class="lead">
             Tell me the facts and I'll learn. Tell me the truth and I'll believe. But tell me a story and it will live in my heart forever.
             <div class="text-muted">- Ancient proverb</div>
           </p>
         </div>
-      </div>
-    </div>
+      </section>
+
+      <!-- Footer -->
+      <footer class="site-footer">
+        <div class="row">
+          <div class="col-md-6">
+            <p class="text-muted">&copy; 2025 Rutul Davè. All rights reserved.</p>
+          </div>
+          <div class="col-md-6">
+            <ul class="social-links">
+              <li><a href="https://www.linkedin.com/in/rutul-dave/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://github.com/stockandawe" target="_blank"><i class="fa fa-github"></i></a></li>
+              <li><a href="mailto:rutuldave@gmail.com"><i class="fa fa-envelope"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
+    </div><!-- /.container -->
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
   </body>
 </html>
