--- a/focus.html
+++ b/focus.html
@@ -4,18 +4,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Rutul Dav&egrave">
+    <meta name="author" content="Rutul Dav&egrave;">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>Rutul Dav&egrave | Professional principles - Focus</title>
+    <title>Rutul Dav&egrave; | Professional principles - Focus</title>
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Oswald:400,300,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-
 
     <!-- Custom styles for this template -->
     <link href="assets/css/main.css" rel="stylesheet">
@@ -33,49 +32,73 @@
 
   <body>
     <div class="container">
-  		<div class="row">
-  			<div class="col-lg-8 col-lg-offset-2 w">
-  				<h2>Focus</h2>
-          <p>
-            The great warrior was an average warrior with laser-like focus.
-          </p>
-          <hr class="soften">
-  			</div>
-  		</div>
+      <!-- Header Section -->
+      <header class="site-header">
+        <h1 class="site-title">RUTUL DAVÈ</h1>
+        <div class="subtitle">Entrepreneur. Technologist. Product Maker.</div>
 
-    	<div class="row">
-    		<div class="col-lg-8 col-lg-offset-2">
-          <p>
-            <h4>
-              <blockquote>
-                "If it's not a hell yes, it's a no"
-                <br/>
-                <br/>
-                <div class="text-muted">- Shaan Puri</div>
-              </blockquote>
+        <nav class="nav-container">
+          <ul class="nav-menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html#principles">Principles</a></li>
+            <li><a href="index.html#books">Books</a></li>
+            <li><a href="index.html#projects">Projects</a></li>
+            <li><a href="index.html#awards">Awards</a></li>
+            <li><a href="mailto:rutuldave@gmail.com">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
 
-              <blockquote>
-                "You can do anything, but you can't do everything"
-                <br/>
-                <br/>
-                <div class="text-muted">- Shaan Puri</div>
-              </blockquote>
+      <!-- Principle Content -->
+      <section class="section">
+        <h2>Focus</h2>
+        <div class="subtitle">The great warrior was an average warrior with laser-like focus.</div>
 
-              <blockquote>
-                "The main thing is to keep the main thing the main thing."
-                <br/>
-                <br/>
-                <div class="text-muted">- Kevin Kelly</div>
-              </blockquote>
+        <hr>
 
-              <blockquote>
-                Focus is not just the ability to say no to many things. It's the ability to say no to even things
-                that with every bone in your body you believe is a phenomenal idea, and you wake up thinking about it,
-                but you say no to because you are thinking about something else.
-              </blockquote>
-            </h4>
-          </p>
-      </div>
-    </div>
+        <div class="principle-content">
+          <blockquote>
+            "If it's not a hell yes, it's a no"
+            <div class="text-muted">- Shaan Puri</div>
+          </blockquote>
+
+          <blockquote>
+            "You can do anything, but you can't do everything"
+            <div class="text-muted">- Shaan Puri</div>
+          </blockquote>
+
+          <blockquote>
+            "The main thing is to keep the main thing the main thing."
+            <div class="text-muted">- Kevin Kelly</div>
+          </blockquote>
+
+          <blockquote>
+            Focus is not just the ability to say no to many things. It's the ability to say no to even things
+            that with every bone in your body you believe is a phenomenal idea, and you wake up thinking about it,
+            but you say no to because you are thinking about something else.
+          </blockquote>
+        </div>
+      </section>
+
+      <!-- Footer -->
+      <footer class="site-footer">
+        <div class="row">
+          <div class="col-md-6">
+            <p class="text-muted">&copy; 2025 Rutul Davè. All rights reserved.</p>
+          </div>
+          <div class="col-md-6">
+            <ul class="social-links">
+              <li><a href="https://www.linkedin.com/in/rutul-dave/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://github.com/stockandawe" target="_blank"><i class="fa fa-github"></i></a></li>
+              <li><a href="mailto:rutuldave@gmail.com"><i class="fa fa-envelope"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
+    </div><!-- /.container -->
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
   </body>
 </html>
