--- a/monkeys-and-pedestals.html
+++ b/monkeys-and-pedestals.html
@@ -4,18 +4,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Rutul Dav&egrave">
+    <meta name="author" content="Rutul Dav&egrave;">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>Rutul Dav&egrave | Professional principles - Monkeys and Pedestals</title>
+    <title>Rutul Dav&egrave; | Professional principles - Monkeys and Pedestals</title>
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Oswald:400,300,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-
 
     <!-- Custom styles for this template -->
     <link href="assets/css/main.css" rel="stylesheet">
@@ -32,51 +31,85 @@
   </head>
 
   <body>
-
-
     <div class="container">
-  		<div class="row">
-  			<div class="col-lg-8 col-lg-offset-2 w">
-  				<h2>Monkeys and Pedestals</h2>
-          <hr class="soften">
-  			</div>
-  		</div>
+      <!-- Header Section -->
+      <header class="site-header">
+        <h1 class="site-title">RUTUL DAVÈ</h1>
+        <div class="subtitle">Entrepreneur. Technologist. Product Maker.</div>
 
-    	<div class="row">
-    		<div class="col-lg-8 col-lg-offset-2">
+        <nav class="nav-container">
+          <ul class="nav-menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html#principles">Principles</a></li>
+            <li><a href="index.html#books">Books</a></li>
+            <li><a href="index.html#projects">Projects</a></li>
+            <li><a href="index.html#awards">Awards</a></li>
+            <li><a href="mailto:rutuldave@gmail.com">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
+
+      <!-- Principle Content -->
+      <section class="section">
+        <h2>Monkeys and Pedestals</h2>
+
+        <hr>
+
+        <div class="principle-content">
           <h3>#monkeyfirst</h3>
-          <p>
-            <h4>
-              <blockquote>
-                Figure out the hard thing first.
-                Try to solve that as quickly as possible.
-                Beware of false progress.
-                <br />
-                <br />
-                <div class="text-muted">- Annie Duke</div>
-              </blockquote>
-            </h4>
-          </p>
+
+          <blockquote>
+            Figure out the hard thing first.
+            Try to solve that as quickly as possible.
+            Beware of false progress.
+            <div class="text-muted">- Annie Duke</div>
+          </blockquote>
+
           <p>
             Tackle the monkey first. Don't use up all your resources on the easy stuff. <b>#monkeyfirst</b>
           </p>
 
           <h3>Reverse salient</h3>
-          <p>
-            Find the “reverse salient”
 
+          <p>
+            Find the "reverse salient"
+          </p>
+
+          <p>
             An idea from the history of science to generate startup ideas or ways to help in a crisis: find the reverse salient.
           </p>
+
           <p>
             A reverse salient is the technology or process that is holding back development of the whole system (like ⚡️car batteries did). Solving the salient unlocks change
           </p>
+
           <p>
             Figure out the hard thing first.
             Try to solve that as quickly as possible.
             Beware of false progress.
           </p>
         </div>
-      </div>
-    </div>
+      </section>
+
+      <!-- Footer -->
+      <footer class="site-footer">
+        <div class="row">
+          <div class="col-md-6">
+            <p class="text-muted">&copy; 2025 Rutul Davè. All rights reserved.</p>
+          </div>
+          <div class="col-md-6">
+            <ul class="social-links">
+              <li><a href="https://www.linkedin.com/in/rutul-dave/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://github.com/stockandawe" target="_blank"><i class="fa fa-github"></i></a></li>
+              <li><a href="mailto:rutuldave@gmail.com"><i class="fa fa-envelope"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
+    </div><!-- /.container -->
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
   </body>
 </html>
