--- a/simple-not-easy.html
+++ b/simple-not-easy.html
@@ -4,18 +4,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Rutul Dav&egrave">
+    <meta name="author" content="Rutul Dav&egrave;">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>Rutul Dav&egrave | Professional principles - Simple is not easy</title>
+    <title>Rutul Dav&egrave; | Professional principles - Simple is not easy</title>
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Oswald:400,300,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-
 
     <!-- Custom styles for this template -->
     <link href="assets/css/main.css" rel="stylesheet">
@@ -32,69 +31,86 @@
   </head>
 
   <body>
-
-
     <div class="container">
-  		<div class="row">
-  			<div class="col-lg-8 col-lg-offset-2 w">
-  				<h2>Simple is not easy</h2>
-          <hr class="soften">
-  			</div>
-  		</div>
+      <!-- Header Section -->
+      <header class="site-header">
+        <h1 class="site-title">RUTUL DAVÈ</h1>
+        <div class="subtitle">Entrepreneur. Technologist. Product Maker.</div>
 
-    	<div class="row">
-    		<div class="col-lg-8 col-lg-offset-2">
-          <p>
-            <h4>
-              <blockquote>
-                “Simplicity is the ultimate sophistication.”
-                <br />
-                <br />
-                <div class="text-muted">- Leonardo da Vince</div>
-              </blockquote>
+        <nav class="nav-container">
+          <ul class="nav-menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html#principles">Principles</a></li>
+            <li><a href="index.html#books">Books</a></li>
+            <li><a href="index.html#projects">Projects</a></li>
+            <li><a href="index.html#awards">Awards</a></li>
+            <li><a href="mailto:rutuldave@gmail.com">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
 
-              <blockquote>
-                “Novice programmers don't yet have the skills to write simple code.”
-                <br />
-                <br />
-                <div class="text-muted">- Sandi Metz</div>
-              </blockquote>
+      <!-- Principle Content -->
+      <section class="section">
+        <h2>Simple is not easy</h2>
 
-              <blockquote>
-                “I didn't have time to write a short letter, so I wrote a long one instead.”
-                <br />
-                <br />
-                <div class="text-muted">- Mark Twain</div>
-              </blockquote>
+        <hr>
 
-              <blockquote>
-                “The five ascending levels of intelligence: smart, intelligent, brilliant, genius, simple.”
-                <br />
-                <br />
-                <div class="text-muted">- Albert Einstein</div>
-              </blockquote>
+        <div class="principle-content">
+          <blockquote>
+            "Simplicity is the ultimate sophistication."
+            <div class="text-muted">- Leonardo da Vince</div>
+          </blockquote>
 
-              <blockquote>
-                “Simple can be harder than complex: You have to work hard to get your thinking clean to make it simple.
-                But it's worth it in the end because once you get there, you can move mountains.”
-                <br />
-                <br />
-                <div class="text-muted">- Steve Jobs</div>
-              </blockquote>
+          <blockquote>
+            "Novice programmers don't yet have the skills to write simple code."
+            <div class="text-muted">- Sandi Metz</div>
+          </blockquote>
 
-              <blockquote>
-                “The great paradox of this remarkable age is that the more complex the world around us becomes,
-                the more simplicity we must seek in order to realize our financial goals.
-                Please underrate neither the majesty of simplicity nor its proven effectiveness as a long-term strategy
-                for productive investing. Simplicity is the master key to financial success.”
-                <br />
-                <br />
-                <div class="text-muted">- Jack Bogle</div>
-              </blockquote>
-            </h4>
-          </p>
+          <blockquote>
+            "I didn't have time to write a short letter, so I wrote a long one instead."
+            <div class="text-muted">- Mark Twain</div>
+          </blockquote>
+
+          <blockquote>
+            "The five ascending levels of intelligence: smart, intelligent, brilliant, genius, simple."
+            <div class="text-muted">- Albert Einstein</div>
+          </blockquote>
+
+          <blockquote>
+            "Simple can be harder than complex: You have to work hard to get your thinking clean to make it simple.
+            But it's worth it in the end because once you get there, you can move mountains."
+            <div class="text-muted">- Steve Jobs</div>
+          </blockquote>
+
+          <blockquote>
+            "The great paradox of this remarkable age is that the more complex the world around us becomes,
+            the more simplicity we must seek in order to realize our financial goals.
+            Please underrate neither the majesty of simplicity nor its proven effectiveness as a long-term strategy
+            for productive investing. Simplicity is the master key to financial success."
+            <div class="text-muted">- Jack Bogle</div>
+          </blockquote>
         </div>
-      </div>
-    </div>
+      </section>
+
+      <!-- Footer -->
+      <footer class="site-footer">
+        <div class="row">
+          <div class="col-md-6">
+            <p class="text-muted">&copy; 2025 Rutul Davè. All rights reserved.</p>
+          </div>
+          <div class="col-md-6">
+            <ul class="social-links">
+              <li><a href="https://www.linkedin.com/in/rutul-dave/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://github.com/stockandawe" target="_blank"><i class="fa fa-github"></i></a></li>
+              <li><a href="mailto:rutuldave@gmail.com"><i class="fa fa-envelope"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
+    </div><!-- /.container -->
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
   </body>
 </html>
