--- a/wealth.html
+++ b/wealth.html
@@ -4,18 +4,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Rutul Dav&egrave">
+    <meta name="author" content="Rutul Dav&egrave;">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>Rutul Dav&egrave | Professional principles - Wealth</title>
+    <title>Rutul Dav&egrave; | Professional principles - Wealth</title>
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Oswald:400,300,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-
 
     <!-- Custom styles for this template -->
     <link href="assets/css/main.css" rel="stylesheet">
@@ -32,69 +31,90 @@
   </head>
 
   <body>
-
-
     <div class="container">
-  		<div class="row">
-  			<div class="col-lg-8 col-lg-offset-2 w">
-  				<h2>Wealth</h2>
-          <hr class="soften">
-  			</div>
-  		</div>
+      <!-- Header Section -->
+      <header class="site-header">
+        <h1 class="site-title">RUTUL DAVÈ</h1>
+        <div class="subtitle">Entrepreneur. Technologist. Product Maker.</div>
 
-    	<div class="row">
-    		<div class="col-lg-8 col-lg-offset-2">
-          <p>
-            <h4>
-              <blockquote>
-                “Wealth is what you don’t see.”
-                <br />
-                <br />
-                "The highest form of wealth is the ability to wake up every morning and say “ I can do whatever I want to do.”
-                The ability to do what you want, when you want, with who you want, for as long as you want is priceless.
-                <br />
-                <br />
-                <div class="text-muted">- Morgan Housel</div>
-              </blockquote>
+        <nav class="nav-container">
+          <ul class="nav-menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html#principles">Principles</a></li>
+            <li><a href="index.html#books">Books</a></li>
+            <li><a href="index.html#projects">Projects</a></li>
+            <li><a href="index.html#awards">Awards</a></li>
+            <li><a href="mailto:rutuldave@gmail.com">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
 
-              <blockquote>
-                “Being Rich is Having Money, Being Wealthy is Having Time”
-              </blockquote>
-              <blockquote>
-                Measure your wealth not by the things you can buy, but by the things that no money can buy.
-              </blockquote>
+      <!-- Principle Content -->
+      <section class="section">
+        <h2>Wealth</h2>
 
-              <blockquote>
-                The rich have money.
-                The wealthy have time.
-                It is easier to become wealthy than rich.
-                <br />
-                <br />
-                <div class="text-muted">- Kevin Kelly</div>
-              </blockquote>
+        <hr>
 
-              <blockquote>
-                “It's not what a man has that constitutes as “wealth”.
-                <br />
-                No. It is to be satisfied with what one has. That is wealth.”
-                <br />
-                <br />
-                <div class="text-muted">- Mark Twain</div>
-              </blockquote>
+        <div class="principle-content">
+          <blockquote>
+            "Wealth is what you don't see."
+            <br><br>
+            "The highest form of wealth is the ability to wake up every morning and say " I can do whatever I want to do."
+            The ability to do what you want, when you want, with who you want, for as long as you want is priceless.
+            <div class="text-muted">- Morgan Housel</div>
+          </blockquote>
 
-              <blockquote>
-                My sister isn't super rich, but she lives a rich lifestyle. She gets to walk her kids to school.
-                They stop for chocolate croissants. She works out with her friends outside. She can take a nap in the middle of the day with no guilt.
+          <blockquote>
+            "Being Rich is Having Money, Being Wealthy is Having Time"
+          </blockquote>
 
-                That's winning! You don't have to become a billionaire to have max joy.
-                <br />
-                <br />
-                <div class="text-muted">- Shaan Puri</div>
-              </blockquote>
-            </h4>
-          </p>
+          <blockquote>
+            Measure your wealth not by the things you can buy, but by the things that no money can buy.
+          </blockquote>
+
+          <blockquote>
+            The rich have money.
+            The wealthy have time.
+            It is easier to become wealthy than rich.
+            <div class="text-muted">- Kevin Kelly</div>
+          </blockquote>
+
+          <blockquote>
+            "It's not what a man has that constitutes as "wealth".
+            <br>
+            No. It is to be satisfied with what one has. That is wealth."
+            <div class="text-muted">- Mark Twain</div>
+          </blockquote>
+
+          <blockquote>
+            My sister isn't super rich, but she lives a rich lifestyle. She gets to walk her kids to school.
+            They stop for chocolate croissants. She works out with her friends outside. She can take a nap in the middle of the day with no guilt.
+
+            That's winning! You don't have to become a billionaire to have max joy.
+            <div class="text-muted">- Shaan Puri</div>
+          </blockquote>
         </div>
-      </div>
-    </div>
+      </section>
+
+      <!-- Footer -->
+      <footer class="site-footer">
+        <div class="row">
+          <div class="col-md-6">
+            <p class="text-muted">&copy; 2025 Rutul Davè. All rights reserved.</p>
+          </div>
+          <div class="col-md-6">
+            <ul class="social-links">
+              <li><a href="https://www.linkedin.com/in/rutul-dave/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://github.com/stockandawe" target="_blank"><i class="fa fa-github"></i></a></li>
+              <li><a href="mailto:rutuldave@gmail.com"><i class="fa fa-envelope"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
+    </div><!-- /.container -->
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
   </body>
 </html>
